<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backfour"
    tools:context="mx.com.dloza.descendent.hidalgo.CostTicketsActivity">

    <TextView
        android:text="@string/cost_ticket"
        android:textSize="@dimen/size_40"
        android:textColor="@color/color_white"
        android:textAlignment="center"
        android:fontFamily="cursive"/>
    <TableRow
        android:layout_marginTop="@dimen/size_28">
        <TextView
            android:text="@string/adult"
            android:layout_marginLeft="@dimen/size_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"
            android:fontFamily="cursive"
            />
        <TextView
            android:text="@string/_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/young"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"
            android:fontFamily="cursive"
            />
        <TextView
            android:text="@string/_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"/>
    </TableRow>
    <TableRow >
        <TextView
            android:text="@string/boys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"
            android:fontFamily="cursive"
            />
        <TextView
            android:text="@string/_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/size_24"
            />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14"
            android:text="@string/info_cost_ticket"
            android:textSize="@dimen/size_32"
            android:fontFamily="cursive"
            android:textColor="@color/color_white"/>

    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_48"
        android:backgroundTint="@color/color_degra"
        android:src="@drawable/phone"
        android:id="@+id/btn_phone"
        android:onClick="phone"
        />

</TableLayout>
