<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backfour"
    tools:context="mx.com.dloza.descendent.SubMenuVideoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video_one"
        android:id="@+id/btn_one"
        android:textSize="@dimen/size_24"
        android:layout_marginTop="@dimen/size_28"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:textColor="@color/color_blue"
        android:onClick="videoOneActivity"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video_two"
        android:id="@+id/btn_two"
        android:layout_marginTop="@dimen/size_15"
        android:textSize="@dimen/size_24"
        android:textColor="@color/color_blue"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:onClick="videoTwoActivity"
        android:layout_below="@id/btn_one"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video_three"
        android:id="@+id/btn_three"
        android:layout_marginTop="@dimen/size_15"
        android:textSize="@dimen/size_24"
        android:textColor="@color/color_blue"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:onClick="videoThreeActivity"
        android:layout_below="@id/btn_two"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video_four"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:id="@+id/btn_four"
        android:layout_marginTop="@dimen/size_15"
        android:textSize="@dimen/size_24"
        android:textColor="@color/color_blue"
        android:onClick="videoFourActivity"
        android:layout_below="@id/btn_three"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_video_five"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:id="@+id/btn_five"
            android:layout_marginTop="@dimen/size_15"
            android:textSize="@dimen/size_24"
            android:textColor="@color/color_blue"
            android:onClick="videoFiveActivity"
            android:layout_below="@id/btn_three"
            />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_four"
        android:src="@drawable/pm"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
