<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backfour"
    tools:context="mx.com.dloza.descendent.CreditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:fontFamily="casual" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/size_226"
                android:gravity="center"
                android:layout_height="@dimen/size_48">

                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_credit"
                    android:textSize="@dimen/size_18"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:id="@+id/tv_title"
                    android:textColor="@color/color_white"/>
            </LinearLayout>

            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description_credit"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_21"
                android:fontFamily="monospace"
                android:textColor="@color/color_white"
                android:id="@+id/tv_des" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:fontFamily="casual" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="@dimen/size_226"
                android:layout_height="@dimen/size_48">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/authors_credit"
                    android:textSize="@dimen/size_21"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:textColor="@color/color_white"
                    android:id="@+id/tv_authors" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_team"
                android:textSize="@dimen/size_18"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/color_white"
                android:id="@+id/tv_name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:fontFamily="casual" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/size_226"
                android:gravity="center"
                android:layout_height="@dimen/size_48">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/consultant"
                    android:textSize="@dimen/size_21"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:id="@+id/tv_assessor" />
            </LinearLayout>
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name_consultant"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:fontFamily="monospace"
                android:id="@+id/tv_name_assessor" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/size_226"
                android:gravity="center"
                android:layout_height="@dimen/size_48">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/client"
                    android:layout_marginTop="@dimen/size_21"
                    android:textSize="@dimen/size_21"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:fontFamily="cursive"
                    android:id="@+id/tv_client" />
            </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/size_21"
                    android:text="@string/name_museum_credit"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:gravity="center"
                    android:fontFamily="monospace" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/size_226"
                android:gravity="center"
                android:layout_height="@dimen/size_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bibliography"
                    android:textSize="@dimen/size_21"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:fontFamily="cursive"
                    android:id="@+id/tv_bibliography" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bibliographies"
                android:textSize="@dimen/size_18"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:fontFamily="monospace"
                android:id="@+id/tv_client1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/size_21"
                android:textStyle="bold"
                android:fontFamily="casual" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>