<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backone"
    tools:context="mx.com.dloza.descendent.dolores.ToursActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall_one"
                android:textSize="@dimen/size_24"
                android:id="@+id/btn_one"
                android:layout_marginTop="@dimen/size_28"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:textColor="@color/color_blue"
                android:onClick="nextPaiting"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall_two"
                android:id="@+id/btn_two"
                android:layout_marginTop="@dimen/size_15"
                android:textSize="@dimen/size_24"
                android:textColor="@color/color_blue"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:onClick="nextPhoto"
                android:layout_below="@id/btn_one"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall_three"
                android:id="@+id/btn_three"
                android:layout_marginTop="@dimen/size_15"
                android:textSize="@dimen/size_24"
                android:textColor="@color/color_blue"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:onClick="nextModel"
                android:layout_below="@id/btn_two"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hall_four"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:id="@+id/btn_four"
                android:layout_marginTop="@dimen/size_15"
                android:textSize="@dimen/size_24"
                android:textColor="@color/color_blue"
                android:onClick="nextStatue"
                android:layout_below="@id/btn_three"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_four"
                android:src="@drawable/mu"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
